--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "test": "nodemon client.js"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   },
